Fixed profile information not showing up on tablets

--- a/assets/scss/_profile.scss
+++ b/assets/scss/_profile.scss
@@ -18,6 +18,12 @@
  */
 
 .profile {
+	.mobilePart {
+		@media only screen and (min-width: 1091px) {
+			display: none !important;
+		}
+	}
+
 	.mainAvatar {
 		@extend .rounded, .mb-2;
 		$size: 256px;
